[gd_scene load_steps=2 format=3 uid="uid://bxqvj8n7qwqxr"]

[ext_resource type="Script" uid="uid://723mg8ks5ym4" path="res://scripts/ui/MainMenuController.gd" id="1_0hdqr"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_0hdqr")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.1, 0.15, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -200.0
offset_right = 150.0
offset_bottom = 200.0

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "LIGHT_OF_KALABHRA_TITLE"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "EDUCATIONAL_ADVENTURE_SUBTITLE"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "START_GAME_BUTTON"

[node name="ContinueButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "CONTINUE_BUTTON"

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "SETTINGS_BUTTON"

[node name="CreditsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "CREDITS_BUTTON"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "EXIT_BUTTON"

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="VBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
